<resources>
    <string name="app_name">CatPedia</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signin">Signin</string>
    <string name="cancel">Cancel</string>
    <string name="prefs_file">com.celia.catpedia_android.PREFERENCE_FILE_KEY</string>
    <string name="sign_in_with_google">Login with google</string>
    <string name="cat_app">Cat_app</string>
    <string name="breed">breed</string>
    <string name="like_empty">like_empty</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="description">Description</string>
    <string name="characteristics">Characteristics</string>
    <string name="vocalisation">Vocalisation</string>
    <string name="strangers_friendly">Strangers Friendly</string>
    <string name="social_needs">Social Needs</string>
    <string name="intelligence">Intelligence</string>
    <string name="health_issues">Health Issues</string>
    <string name="energy_level">Energy Level</string>
    <string name="dog_friendly">Dog Friendly</string>
    <string name="child_friendly">Child Friendly</string>
    <string name="affection">Affection</string>
    <string name="adaptability">Adaptability</string>
    <string name="cat_breed">Cat breed</string>
    <string name="returnToList">Return</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="change_mode">Change mode</string>
    <string name="notifications">Notifications</string>
    <string name="delete_favorites">Delete Favorites</string>
    <string name="delete">Delete</string>
    <string name="exit">Exit</string>
    <string name="log_out">Log Out</string>
    <string name="light_mode">Light mode</string>
    <string name="dark_mode">Dark mode</string>
    <string name="a_z">A…Z</string>
    <string name="z_a">Z…A</string>
    <string name="dark_light">Change dark/light mode</string>
    <string name="welcome">Welcome</string>
    <string name="your_email">Your email here</string>
    <string name="notification_on">Enabled</string>
    <string name="notification_off">Disabled</string>
    <string name="login_error">The user does not exist</string>
    <string name="generic_error">An error has occurred</string>
    <string name="empty_favorites">Add any cat breed</string>
    <string name="add">Add</string>
    <string name="email_string">email</string>
    <string name="message">message</string>
    <string name="init_app">Init app</string>
    <string name="init_screen">InitScreen</string>
    <string name="permission_granted">Permission already granted</string>
    <string name="camera_granted">Camera Permission Granted</string>
    <string name="camera_denied">Camera Permission Denied</string>
    <string name="visual">visual</string>
    <string name="dark_visual">darkmode</string>
    <string name="breedId">breedId</string>
    <string name="breeds">breeds</string>
    <string name="favorites_string">favorites</string>
    <string name="sort">ascending</string>
    <string name="notification_enabled">notificationEnabled</string>
    <string name="catpedia">catpedia</string>
</resources>