<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_ligth"
    tools:context=".activities.LoginActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/image_view_principal"
        android:layout_height="@dimen/image_view_principal"
        android:layout_marginTop="@dimen/margin_42"
        android:contentDescription="@string/cat_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cat" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_62"
        android:layout_marginTop="@dimen/margin_32"
        android:layout_marginEnd="@dimen/margin_62"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        style="@style/DefaultEditText"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_62"
        android:layout_marginTop="@dimen/padding_8"
        android:layout_marginEnd="@dimen/margin_62"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText"
        style="@style/DefaultEditText"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_62"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_62"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        style="@style/DefaultButton.Primary"/>

    <Button
        android:id="@+id/signInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_62"
        android:layout_marginTop="@dimen/padding_8"
        android:layout_marginEnd="@dimen/margin_62"
        android:text="@string/signin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        style="@style/DefaultButton.Secondary"/>

    <Button
        android:id="@+id/googleSingIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_62"
        android:layout_marginTop="@dimen/margin_62"
        android:layout_marginEnd="@dimen/margin_62"
        android:drawableStart="@drawable/btn_google_light_normal"
        android:text="@string/sign_in_with_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInButton"
        style="@style/DefaultButton.Alternative"/>


</androidx.constraintlayout.widget.ConstraintLayout>