<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profile_background"
    tools:context=".fragments.ProfileFragment">

    <ScrollView
        android:id="@+id/svProfile"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/llProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp"
                    android:layout_marginTop="140dp"
                    android:layout_marginEnd="@dimen/margin_6"
                    android:background="@drawable/background_rounded"
                    android:padding="@dimen/padding_16"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="110dp"
                        android:layout_marginTop="6dp"
                        android:layout_marginBottom="12dp"
                        android:text="User"
                        android:textSize="40sp"
                        android:textStyle="bold"
                        android:textColor="@color/grey_dark_text"
                        app:layout_constraintBottom_toTopOf="@id/tvEmail"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="110dp"
                        android:layout_marginBottom="6dp"
                        android:text="User@user.com"
                        android:textSize="20sp"
                        android:textColor="@color/grey_dark_text"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvName" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16"
                    android:layout_marginTop="@dimen/margin_120"
                    android:elevation="10dp"
                    app:cardCornerRadius="@dimen/corner_12"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/ivAvatar"
                        android:layout_width="@dimen/dimen_image_profile"
                        android:layout_height="@dimen/dimen_image_profile"
                        app:srcCompat="@drawable/cat" />
                </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/clProfile">

                <ImageView
                    android:id="@+id/ivEdit"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:elevation="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/cat_edit" />

                <TextView
                    android:id="@+id/tvEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_16"
                    android:text="@string/change_mode"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/grey_dark_text"
                    app:layout_constraintStart_toEndOf="@+id/ivEdit"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_6"
                    android:background="@drawable/button_rounded"
                    android:padding="@dimen/padding_16"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toBottomOf="@+id/tvEdit" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/clEdit">

                <ImageView
                    android:id="@+id/ivNotification"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/cat_ring" />

                <TextView
                    android:id="@+id/tvNotification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_16"
                    android:text="@string/notifications"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/grey_dark_text"
                    app:layout_constraintEnd_toStartOf="@+id/ivNotification"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btNotification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_6"
                    android:background="@drawable/button_rounded"
                    android:padding="@dimen/padding_16"
                    android:text="@string/on"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvNotification" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

                <ImageView
                    android:id="@+id/ivFavorite"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/cat_love" />

                <TextView
                    android:id="@+id/tvFavorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_16"
                    android:text="@string/delete_favorites"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/grey_dark_text"
                    app:layout_constraintStart_toEndOf="@+id/ivFavorite"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btFavorite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_6"
                    android:background="@drawable/button_rounded"
                    android:padding="@dimen/padding_16"
                    android:text="@string/delete"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvFavorite" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_6"
                android:layout_marginBottom="32dp"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

                <ImageView
                    android:id="@+id/ivLogOut"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/cat_angry" />

                <TextView
                    android:id="@+id/tvLogOut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_16"
                    android:text="@string/exit"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/grey_dark_text"
                    app:layout_constraintEnd_toStartOf="@+id/ivLogOut"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btLogOut"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_6"
                    android:background="@drawable/button_rounded_border"
                    android:padding="@dimen/padding_16"
                    android:text="@string/log_out"
                    android:textColor="@color/dark_pink"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvLogOut" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>